--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Ming
-SEOTitle: 明的博客 
+title: MC
+SEOTitle: MC's blog 
 header-img: img/post-bg-desk1.jpg
-email: 1063084728@qq.com
+email: markchanemail@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "MC, MC Blog, MC的博客, markchan3, markchan, C"
 url: "http://markchan3.github.io.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/markchan3/markchan3.github.io.git" # you code repository
@@ -18,13 +18,13 @@ sidebar-avatar: /img/apple-touch-icon.jpg     # use absolute URL, seeing it's us
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
+# weibo_username:     markchan3
 zhihu_username:     
-github_username:    lovegethub
+github_username:    markchan3
 facebook_username:  
 jianshu_username:   cd77ee2af01e
-csdn_username:      qq_36698674
-#twitter_username:   qiubaiying
+csdn_username:      qq_25140013
+#twitter_username:   markchan3
 
 
 
