--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     
 github_username:    markchan3
 facebook_username:  
-jianshu_username:   
+jianshu_username:   Timer_80b4
 csdn_username:      qq_25140013
 #twitter_username:   markchan3
 
